# MeetingAgent

./: .gitignore  build_exe.bat  caption_ocr.py  capture.py  meeting_agent_app.py  merge.py  requirements.txt  teams_uia_probe.py  teams_window.py
docs/: launch.html
installer/: README.txt  install.bat
samples/: sample_transcript.vtt
ver0/: .gitignore  README.md  audio_recorder.py  main.py  meeting_agent_app.py  meeting_archiver_context.md  transcript.py
ver0/docs/: SLACK_SETUP.md  slack_message_template.json
ver0/installer/: Run.bat  uninstall.bat
ver0/samples/: sample_transcript.md
ver1/: .gitignore  Cargo.toml  README.md  build.rs  rust-toolchain.toml
ver1/.cargo/: config.toml
ver1/assets/: build-readme.ps1  readme-template.html
ver1/assets/screenshots/: capture.ps1  render-mockups.ps1
ver1/src/: clock.rs  config.rs  dialog.rs  main.rs  output.rs  persisted_state.rs  recorder.rs
ver1/src/audio/: loopback.rs  mic.rs  mixer.rs  mod.rs
ver1/src/gui/: icons.rs  mod.rs  popup.html  popup.rs  tray.rs  welcome.html  welcome.rs
ver1/src/screen/: mod.rs  phash.rs  share_target.rs  wgc.rs
ver1/src/state/: mod.rs  presenter.rs
ver1/src/timeline/: event.rs  mod.rs  render.rs
ver1/src/uia/: captions.rs  mod.rs
