[package]
name = "meeting-agent"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["eunsang.lee@endorobo.com"]
description = "L2 capture agent for Microsoft Teams meetings: captions via UIA, audio via WASAPI process loopback, shared screens via Windows.Graphics.Capture"
build = "build.rs"

[[bin]]
name = "meeting-agent"
path = "src/main.rs"

[build-dependencies]
ico = "0.4"
image = { version = "0.25", default-features = false, features = ["png"] }
winres = "0.1"

[dependencies]
anyhow = "1"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "fs", "signal", "io-util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "time", "local-time"] }
tracing-appender = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde", "clock"] }
clap = { version = "4", features = ["derive"] }
hound = "3"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
crossbeam-channel = "0.5"
parking_lot = "0.12"
once_cell = "1"
notify = "6"
dirs = "5"
windows-core = "0.58"

# GUI: system tray + custom WebView2 popups (replaces winrt toast — wry covers
# both the welcome dialog and runtime notifications)
tray-icon = "0.19"
tao = "0.30"
muda = "0.15"
auto-launch = "0.5"
wry = "0.47"

[dependencies.windows]
version = "0.58"
features = [
    "implement",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Threading",
    "Win32_System_Performance",
    "Win32_System_ProcessStatus",
    "Win32_System_Variant",
    "Win32_System_LibraryLoader",
    "Win32_UI_Accessibility",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_HiDpi",
    "Win32_Media_Audio",
    "Win32_Media_KernelStreaming",
    "Win32_Media_Multimedia",
    "Win32_Storage_FileSystem",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Graphics",
    "Graphics_Capture",
    "Graphics_DirectX",
    "Graphics_DirectX_Direct3D11",
    "Foundation",
    "Foundation_Collections",
    "Foundation_Metadata",
    "Win32_System_WinRT",
    "Win32_System_WinRT_Direct3D11",
    "Win32_System_WinRT_Graphics_Capture",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_System_Console",
    "Win32_Media_MediaFoundation",
    "Win32_System_Ole",
]

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
opt-level = 3
panic = "abort"

[profile.dev]
opt-level = 1
